Safari text wrap fix

--- a/pages/CV/components/JobCard/JobCard.module.css
+++ b/pages/CV/components/JobCard/JobCard.module.css
@@ -18,7 +18,7 @@
 .description {
   font-size: var(--font-size-small);
   max-width: 100%;
-  text-wrap: balance;
+  text-wrap: wrap;
   margin-bottom: var(--spacing-medium);
 }
 
